crates/ruff/src/rules/flake8_errmsg/snapshots/ruff__rules__flake8_errmsg__tests__custom.snap
---
source: crates/ruff/src/rules/flake8_errmsg/mod.rs
expression: diagnostics
---
- - kind:
      name: RawStringInException
      body: "Exception must not use a string literal, assign to variable first"
      suggestion: ~
      fixable: false
    location:
      row: 5
      column: 23
    end_location:
      row: 5
      column: 53
    fix: ~
    parent: ~
  - kind:
      name: FStringInException
      body: "Exception must not use an f-string literal, assign to variable first"
      suggestion: ~
      fixable: false
    location:
      row: 14
      column: 23
    end_location:
      row: 14
      column: 56
    fix: ~
    parent: ~
  - kind:
      name: DotFormatInException
      body: "Exception must not use a `.format()` string directly, assign to variable first"
      suggestion: ~
      fixable: false
    location:
      row: 18
      column: 23
    end_location:
      row: 18
      column: 81
    fix: ~
    parent: ~

